Fixed overflow

--- a/css files/styles_nav.css
+++ b/css files/styles_nav.css
@@ -9,11 +9,12 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  min-height: 100%; /* Ensure it grows with content */
+  width: 100vw; /* Use viewport width */
+  height: 100vh; /* Use viewport height */
   z-index: -1;
   background: linear-gradient(to right, #1B1E22, #000000, #000000, #000000, #1B1E22);
+  overflow-x: hidden; /* Prevent horizontal overflow */
+
 }
 
 .bg-color-dark{
